--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,10 @@ jobs:
       - image: circleci/node:6-browsers
     steps:
       - checkout
+      # Log the current branch
+      - run:
+          name: Show current branch
+          command: echo ${CIRCLE_BRANCH}
       - restore_cache:
           key: my-project-{{ .Branch }}-{{ checksum "package.json" }}
       - run: npm install
@@ -13,5 +17,25 @@ jobs:
           key: my-project-{{ .Branch }}-{{ checksum "package.json" }}
           paths:
             - "node_modules"
+      - run:
+          name: Linting
+          command: npm run lint
       - run: xvfb-run -a npm run test -- --single-run --no-progress --browser=ChromeNoSandbox
       - run: xvfb-run -a npm run e2e -- --no-progress --config=protractor-ci.conf.js
+      # Build project with different configuration based on
+      # the current branch
+      - run:
+          name: Building
+          command: |
+              if [ "${CIRCLE_BRANCH}" == "staging" ]; then
+                  npm run build-staging
+              elif [ "${CIRCLE_BRANCH}" == "master" ]; then
+                  npm run build-prod
+              else
+                  npm run build-dev
+              fi
+      # Cache the dist folder for the deploy job
+      - save_cache:
+          key: v1-dist-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+              - dist
