--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,6 @@ workflows:
                 filters:
                     branches:
                         only:
-                            - develop
+                            - development
                             - staging
                             - master
