--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,8 +60,7 @@ jobs:
             # Install Firebase cli
             - run:
                 name: Install Firebase cli
-                command:
-                    npm install -g firebase-tools@3.13.1
+                command: npm install -g firebase-tools@3.13.1
             # Deploy to the firebase app corresponding to the current branch
             - run:
                 name: Deploy to Firebase
