--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,17 +63,18 @@ jobs:
                 command: npm install -g firebase-tools@3.13.1
             # Deploy to the firebase app corresponding to the current branch
             - run:
-                name: Deploy to Firebase
-                commands:
-                    - >
-                        if [ "${CIRCLE_BRANCH}" == "development" ]; then
-                            firebase use development
-                        elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
-                            firebase use staging
-                        elif [ "${CIRCLE_BRANCH}" == "master" ]; then
-                            firebase use master
-                        fi
-                    - firebase deploy --token=$FIREBASE_TOKEN --non-interactive
+                name: Resolve Deployment Branch
+                command: |
+                    if [ "${CIRCLE_BRANCH}" == "development" ]; then
+                        firebase use development
+                    elif [ "${CIRCLE_BRANCH}" == "staging" ]; then
+                        firebase use staging
+                    elif [ "${CIRCLE_BRANCH}" == "master" ]; then
+                        firebase use master
+                    fi
+            - run:
+                name: Deploy
+                command: - firebase deploy --token=$FIREBASE_TOKEN --non-interactive
 
 workflows:
     version: 2
