--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,7 @@ jobs:
                     fi
             - run:
                 name: Deploy
-                command: - firebase deploy --token=$FIREBASE_TOKEN --non-interactive
+                command: firebase deploy --token=$FIREBASE_TOKEN --non-interactive
 
 workflows:
     version: 2
